tests/machine/x/ocaml/let_and_print.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/let_and_print.ml", line 5, characters 16-23:
5 |   print_endline (a + b)
                    ^^^^^^^
Error: This expression has type int but an expression was expected of type
         string


Context (around line 5):
   3 | 
   4 | let () =
   5 |   print_endline (a + b)
   6 | 
