tests/machine/x/ocaml/let_and_print.ml
let a = 10
let b = 20

let () =
  print_endline (a + b)
